--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -555,7 +555,7 @@ body {
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.1);
   background:#fff;
-  background-image:url(../img/me.JPG);
+  background-image:url(../img/me.jpg);
   background-position:center;
   background-size:100%;
   border:2px solid #f26522;
